--- a/Cheats.htm
+++ b/Cheats.htm
@@ -1,11 +1,8 @@
 <!DOCTYPE html><html lang="de"><head><meta charset="utf-8">
-
 <!-- Optimierung für Mobilgeräte -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <!-- HTTP-Header -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
 <!-- Metadaten -->
 <meta name="description" content="
 Sammlung von Themen über Informatik, kompakt.
@@ -17,20 +14,19 @@ technologie,fachinformatik,computer,pc,
 system,netzwerk,integration,programmierung
 snippets,vorlagen,lernen,verstehen,
 "><meta name="author" content="Jumi">
-
 <!-- Favicon -->
-<link rel="icon" href="../assets/img/ico/jumi.ico">
+<link rel="icon" href="https://www.jumi.biz/assets/img/ico/jumi.ico">
 <title>jumi</title>
-
 <!-- Debuger (falls nötig)
         <meta http-equiv="refresh"y content="6">
         <style>* {border: 1px solid red;}</style>-->
 
-<!-- Layout -->
-<link rel="stylesheet" href="../assets/css/main.css">
-<link rel="stylesheet" href="../assets/css/menu.css">
-<link rel="stylesheet" href="../assets/css/modal.css">
-<link rel="stylesheet" href="../assets/css/media-queries.css">
+<!-- Sheets -->
+<link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="assets/css/menu.css">
+<link rel="stylesheet" href="assets/css/main.css">
+<link rel="stylesheet" href="assets/css/modal.css">
+<link rel="stylesheet" href="assets/css/media-queries.css">
 
 </head>
 <body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
@@ -50,319 +46,86 @@ snippets,vorlagen,lernen,verstehen,
 </button>
 
 <ul data-state="closed" class="primary-navigation" id="primary-navigation">
-<li><a href="https://www.jumi.biz/Content"><i class="menu-icon">
-<img src="../assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="https://www.jumi.biz/pages/Links"><i class="menu-icon">
-<img src="../assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="https://www.jumi.biz/pages/Cheats"><i class="menu-icon">
-<img src="../assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
+<li><a href="https://www.jumi.biz/Content.htm"><i class="menu-icon">
+<img src="https://www.jumi.biz/assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
+<li><a href="https://www.jumi.biz/Links.htm"><i class="menu-icon">
+<img src="https://www.jumi.biz/assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
+<li><a href="https://www.jumi.biz/Cheats.htm"><i class="menu-icon">
+<img src="https://www.jumi.biz/assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
 <li><a href="https://www.jumi.biz"><i class="menu-icon">
-<img src="../assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
-
-</ul>
-</nav>
-</div>
-</header>
+<img src="https://www.jumi.biz/assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i>
+<span id="wtf-is-jumi">wtf is jumi?</span></a></li>
+</ul></nav></div></header>
 <main>
 
-<div class="grid-container">
-<article class="content flow">
-<h1>GTA San Andreas (PS2)</h1>
-<p><strong>Unsterblichkeit</strong>:</p>
-<pre><code>- rechts, oben, X, Dreieck, links, rechts, unten, Kreis
-</code></pre><p><strong>Unendliche Munition</strong>:</p>
-<pre><code>- unten, X, rechts, links, Kreis, oben, unten, viereck
-</code></pre><p><strong>Sechs-Sterne Fahndungslevel</strong>:</p>
-<pre><code>- oben, oben, unten, unten, links, rechts, links, rechts, viereck, Kreis
-</code></pre><p><strong>Supersprung</strong>:</p>
-<pre><code>- links, links, Dreieck, Dreieck, rechts, rechts, links, rechts, viereck, R1, R2
-</code></pre></article>
-<article class="content flow">
-<h1>Tony Hawks Pro Skater 2 (PS2)</h1>
-<table>
-<thead>
-<tr>
-<th>Cheat</th>
-<th>Effekt</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>IAMTOOMUSCULAR</td>
-<td>Bessere Grinds</td>
-</tr>
-<tr>
-<td>NEEDSPEED</td>
-<td>Schnellere Geschwindigkeit</td>
-</tr>
-<tr>
-<td>FLYAWAY</td>
-<td>Unbegrenzte Luft</td>
-</tr>
-<tr>
-<td>IMINTERFACING</td>
-<td>Unbegrenzte Special Meter</td>
-</tr>
-<tr>
-<td>BEESUIT</td>
-<td>Moon Physics</td>
-</tr>
-</tbody>
-</table>
-</article>
-<article class="content flow">
-<h4>Leuchtkraft</h4>
-<img src="content/pics/jumi-logo.png" alt="Jumi glowing">
-<p>Die Fähigkeit zu leuchten nennt man "Biolumineszenz" und 
-kommt bei vielen Lebewesen vor. Enzyme erzeugen Energie in 
-Form von Licht. Viele Fragen bleiben offen!</p>
-</article>
-<article class="content flow">
-<h3>Facebook war nicht Erster!</h3>
-<img src="content/pics/kwick.png" alt="Startseite von kwick.de">
-<p>MySpace, Friendster, Xing, LinkedIn und StudiVZ sind bekannt.<br>
-Aber alles unvergleichbar mit dem Hype von Kwick.de !</p>
-</article>
-<article class="content flow">
-    <h3>Entschlossenheit...</h3>
-    <p>...kennt keine Furcht, nur Gewissheit!</p>
-    <br><span class="zitat-referenz">"Ich bin ein Yakuzza der alten Schule, wenn ich sterben muss, dann soll es geschehen" -Brother (2000)</span></p>
-</article>
-</div>
-</main>
-
-<footer>
+<div class="grid-container"><article class="content flow">
+<h2 class="bigHL">GTA San Andreas (PS2)</h2>
+<dl><dt><b>Godmode</b></dt>
+<dd><code>&rarr; &uarr; &times; &triangledown; &larr; &rarr; &darr; &cir;
+</code></dd><br><dt><b>Infinite Ammunition</b></dt>
+<dd><code>&darr; &times; &rarr; &larr; &cir; &uarr; &darr; &square;
+</code></dd><br><dt><b>Most Wanted</b></dt>
+<dd><code>&uarr; &uarr; &darr; &darr; &larr; &rarr; &larr; &rarr; &square; &cir;
+</code></dd></dl>
+</article><article class="content flow">
+<h2 class="bigHL">Tony Hawks Pro Skater 2 (PS2)</h2>
+<dl><dt><b>Perfect Balance</b></dt>
+<dd><code>&rarr; &uarr; &times; &triangledown; &larr; &rarr; &darr; &cir;
+</code></dd><br><dt><b>Zero Gravity</b></dt>
+<dd><code>&darr; &times; &rarr; &larr; &cir; &uarr; &darr; &square;
+</code></dd><br>
+<dt><b>100% Completed</b></dt>
+<dd><code>&uarr; &uarr; &darr; &darr; &larr; &rarr; &larr; &rarr; &square; &cir;
+</code></dl></article><article class="content flow">
+<h2 class="bigHL">Entschlossenheit </h2>
+...kennt keine Furcht, nur Gewissheit!
+<br><br><span class="kleintxt">"Ich bin ein Yakuzza der alten Schule, wenn ich sterben muss, dann soll es geschehen"
+<br>-Brother (2000)</span></article><article class="content flow">
+<h2 class="bigHL">$ find / -type d -name '.*'</h2>
+<dl><b>h4x r3@1i+y f!nq |-|iqq3n p@+h</b><br><br>
+<span class="kleintxt">"Sometimes, to find the answer, you have to ask the right questions"
+<br>-Elliot Alderson (S2E2)</span>
+</article><article class="content flow">
+<h2 class="glowtxt">Biolumineszenz</h2>
+<p>Dies geschieht mithilfe von Enzymen und dem Molekül <span class="glowtxt">Luciferin</span>, abgeleiet von dem lateinischen Wort für "Lichtträger".&nbsp;Der&nbsp;Begriff wurde von dem französischen Chemiker Raphaël Dubois geprägt, der im&nbsp;19.&nbsp;Jahrhundert.</p>
+</article></div></main>
 <!-- IMPRESSUM -->
-<span class="flex profil-links"><a id="githubIcon" href="https://github.com/xuser123" target="_blank"><img src="../assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;<a  id="instagramIcon" href="https://instagram.com/jumicontent" target="_blank"><img src="../assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
+<footer><span class="flex profil-links">
+<!-- github.com/xuser123 -->
+<a id="githubIcon" href="https://github.com/xuser123" target="_blank">
+<img src="https://www.jumi.biz/assets/img/ico/github.ico" alt="Github/xuser123">
+</a>&#32;
+<!-- instagram.com/jumicontent -->
+<a id="instagramIcon" href="https://instagram.com/jumicontent" target="_blank">
+<img src="https://www.jumi.biz/assets/img/ico/instagram.ico" alt="Instagram/jumicontent">
+</a></span>
+
 <!-- contact@jumi.biz -->
-<span class="jumi-email">contact&#64;jumi.biz</span>
-<!-- Site Features -->
-<span class="flex siteFeatures"><a id="exportIcon"><img src="../assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;<a id="scrollToTop" href="#"><img src="../assets/img/ico/backTop.ico" alt="Back to Top"></a></span>
-</footer>
+<span class="jumi-email">
+contact&#64;jumi.biz
+</span>
 
-<!-- Skripte -->
-    <script src="../assets/js/menu.js"></script>
-	<script src="../assets/js/modal.js"></script>
-    <!-- for Easteregg Project:
-    <script src="../assets/js/read.js"></script> -->
-
-    <!-- PDF-Export-Script (jsPDF):
+<span class="flex siteFeatures">
+<!-- Export -Feature (inaktiv)-->
+<a id="exportIcon">
+<img src="https://www.jumi.biz/assets/img/ico/exportPDF.ico" alt="Export as PDF">
+<!-- PDF-Export-Script (jsPDF):
 https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
-<script src="../assets/js/jspdf.umd.min.js"> -->
+<script src="https://www.jumi.biz/assets/js/jspdf.umd.min.js"> -->
+</a>&#32;
 
-</body>
-</html>
-<!DOCTYPE html><html lang="de"><head><meta charset="utf-8">
+<!-- Zum Seitenanfang -Feature (aktiv)-->
+<a id="scrollToTop" href="#">
+<img src="https://www.jumi.biz/assets/img/ico/backTop.ico" alt="Zum Seitenanfang">
+</a></span></footer>
 
-<!-- Optimierung für Mobilgeräte -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- JavaScript -->
+    <script src="https://www.jumi.biz/assets/js/menu.js"></script>
+	<script src="https://www.jumi.biz/assets/js/modal.js"></script>
 
-<!-- HTTP-Header -->
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-<!-- Metadaten -->
-<meta name="description" content="
-Sammlung von Themen über Informatik, kompakt.
-"><meta name="keywords" content="
-linux,windows,sicherheit,hacking,
-administration,code,shell,terminal,syntax,
-tool,programm,it,informatik,information,
-technologie,fachinformatik,computer,pc,
-system,netzwerk,integration,programmierung
-snippets,vorlagen,lernen,verstehen,
-"><meta name="author" content="Jumi">
-
-<!-- Favicon -->
-<link rel="icon" href="assets/img/ico/jumi.ico">
-<title>jumi</title>
-
-<!-- Debuger (falls nötig)
-        <meta http-equiv="refresh"y content="6">
-        <style>* {border: 1px solid red;}</style> -->
-
-<!-- Layout -->
-<link rel="stylesheet" href="assets/css/style.css">
-<link rel="stylesheet" href="assets/css/menu.css">
-<link rel="stylesheet" href="assets/css/main.css">
-<link rel="stylesheet" href="assets/css/modal.css">
-<link rel="stylesheet" href="assets/css/media-queries.css">
-
-</head>
-<body id=" ଘ(੭*ˊᵕˋ)੭* ̀ˋ hello ɪɴᴛᴇʀɴᴇᴛ ">
-<header>
-<div class="header-content">
-
-<!-- LOGO -->
-<h1 class="jumi-logo"><a href="https://jumi.biz">jumi.biz</a>&#32;</h1>
-
-<!-- MENU -->
-<nav class="menu">
-<button class="menu-toggle"
-        aria-controls="primary-navigation"
-        aria-expanded="false">
-  <span class="visually-hidden">Menu</span>
-  <div class="hamburger" aria-hidden="true"></div>
-</button>
-
-<ul data-state="closed" class="primary-navigation" id="primary-navigation">
-<li><a href="https://jumi.biz/Content.htm"><i class="menu-icon">
-<img src="assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="https://jumi.biz/pages/Links.htm"><i class="menu-icon">
-<img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="https://jumi.biz/pages/Cheats.htm"><i class="menu-icon">
-<img src="assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
-<li><a href="https://jumi.biz"><i class="menu-icon">
-<img src="assets/img/ico/jumi.ico" alt="WTF is Jumi?"></i><span id="wtf-is-jumi">wtf is jumi?</span></a></li>
-
-</ul>
-</nav>
-</div>
-</header>
-<main>
-
-<!-- MAIN -->
-<div class="grid-container">
-<article class="content flow">
-
-<!-- print("hello world")  -->
-<h2>print("hello world") </h2>
-    <p>Diese Website ist im Aufbau</p>
-	<ul class="kleintxt">
-	<li>[2019-06]: Domain gemietet</li>
-	<li>[2020/21]: Konzeptentwicklung</li>
-	<li>[2022-11]: Ausarbeitung</li>
-	<li>[2023-03]: Designentwicklung</li>
-	<li>[2023-08]: Github-Anbindung</li>
-	<li>[2023-10]: Integration</li></ul>
-
-<!-- WTF is Jumi.biz ? -->
-<h2>WTF is Jumi.biz ?</h2>
-	<p>Hier findest du Zusammenfassungen zu verschiedenen Computerthemen. </p>
-
-<div class="inside-content">
-<div class="in-inside">
-<h3><a href="https://jumi.biz/Content.htm">
-Themen:</a></h3>
-<ul>
-<li>Fachinformatik</li>
-<li>Sicherheit</li>
-<li>Netzwerke</li>
-<li>Programmierung</li>
-<li>Projektmanagement</li>
-<li></li>
-</ul>
-</div>
-<div class="in-inside">
-<h3>Navigation: </h3>
-    <link rel="stylesheet" href="assets/css/word-as-button.css">
-    <ol><li><div class="keyboard-styled-word"><span>TAB</span></div> Selektieren </li>
-    <li><div class="keyboard-styled-word"><span>Enter</span></div> Öffnen </li></ol>
-    <ul><li>Rückwärts selektieren<br><div class="keyboard-styled-word"><span>Shift</span></div> + <div class="keyboard-styled-word"><span>TAB</span></div></li></ul>
-</div>
-</div>
-</article>
-<article class="content flow">
-
-<!-- $ whoami -->
-<h2>&#36; whoami</h2>
-
-<div class="flex">
-
-<img id="modalTrigger01" src="assets/img/profile-img-1.png"
-alt="Picture shows Jumi">
-<dialog id="openModal01">
-<img src="assets/img/modal/profile-img-modal-01.png" alt="Image-Modal" id="imgModal01">
-<h2>Human Interface</h2>
-<button id="closeModal01"> &times; </button></dialog>
-
-<img id="modalTrigger02" src="assets/img/profile-img-2.png"
-alt="Picture shows shoe">
-<dialog id="openModal02">
-<img src="assets/img/modal/profile-img-modal-02.png" alt="Image-Modal" id="imgModal02">
-<h2>Local Area</h2>
-<button id="closeModal02"> &times; </button></dialog>
-
-<img id="modalTrigger03" src="assets/img/profile-img-3.png"
-alt="Picture shows computer">
-<dialog id="openModal03">
-<img src="assets/img/modal/profile-img-modal-03.png" alt="Image-Modal" id="imgModal03">
-<h2>Central Processing</h2>
-<button id="closeModal03"> &times; </button></dialog>
-
-</div>
-
-    <p>Mir macht es Spass, mich mit IT zu beschäftigen und grundlegendes Wissen für Lernzwecke in
-    visuell-ergonomische Texte zu fragmentieren. Meine Quellen sind öffentliche Personen mit großer Reichweite und private Weiterbildungen.<br><br>
-    <span class="kleintxt">"Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske!" <br><br>-V wie Vendetta (2005)</span></p>
-
-</article>
-<article class="content flow">
-
-<!-- Dark Mode Only -->
-<h2>Dark Mode Only</h2>
-    <p>Ein dunkler Bildschirm spart bis zu 60% Energie und schont die Augen.
-    Wenn du den hellen Modus immer noch bevorzugst dann GTFO!<br><br>
-    <span class="kleintxt">"Come to the Dark Side" <br>-Darth Vader</span></p>
-
-</article>
-<article class="content flow">
-
-<!-- IT ~ Kung Fu -->
-<h2>IT &#126; Kung Fu</h2>
-    <p>Der chinesische Begriff "Kung Fu" bezieht sich auf Fähigkeiten und Techniken,
-    die durch lange, harte Übung und Geduld erlangt werden. Eine Disziplin,
-    die zur Meisterung viel Engagement und Einsatz erfordert.
-    Kung Fu kombiniert Bewegungen und Strategien,
-    während Informations-Technologie Daten verarbeitet und speichert.
-    Kung Fu beherrschen verlangt Reaktionsfähigkeit,
-    bei Informationen entscheidet analytisches und logisches Denken.<br><br>
-    <span class="kleintxt">"Der Meister erscheint wenn der Schüler bereit ist" <br>-Karate Tiger (1986)</span></p>
-
-</article>
-<article class="content flow">
-
-<!-- Shownotes -->
-<h3>Shownotes</h3>
-	<ul><li>Kommasetzung mit KI: <a href="https://komma.ai/#" target="_blank">komma.ai</a></li>
-	<li>Suchmaschine mit KI: <a href="https://you.com" target="_blank">you.com</a></li>
-	<li>HTML-Checker: <a href="https://validator.w3.org/" target="_blank">validator.w3.org</a></li>
-	<li>CSS-Checker: <a href="https://jigsaw.w3.org/css-validator/" target="_blank">jigsaw.w3.org/css-validator</a></li></ul>
-
-</article>
-</div>
-</main>
-
-<footer>
-<!-- IMPRESSUM -->
-<span class="flex profil-links"><a id="githubIcon" href="https://github.com/xuser123" target="_blank"><img src="assets/img/ico/github.ico" alt="Github/xuser123"></a>&#32;<a  id="instagramIcon" href="https://instagram.com/jumicontent" target="_blank"><img src="assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></span>
-<!-- contact@jumi.biz -->
-<span class="jumi-email">contact&#64;jumi.biz</span>
-<!-- Site Features -->
-<span class="flex siteFeatures"><a id="exportIcon"><img src="assets/img/ico/exportPDF.ico" alt="Export as PDF"></a>&#32;<a id="scrollToTop" href="#"><img src="assets/img/ico/backTop.ico" alt="Back to Top"></a></span>
-</footer>
-
-<!-- Skripte -->
-    <script src="assets/js/menu.js"></script>
-	<script src="assets/js/modal.js"></script>
     <!-- for Easteregg Project:
-    <script src="assets/js/read.js"></script> -->
+    <script src="https://www.jumi.biz/assets/js/read.js"></script> -->
 
-    <!-- PDF-Export-Script (jsPDF):
-https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
-<script src="assets/js/jspdf.umd.min.js"> -->
-
-<!-- HTML-Analyzer Debugging ->
-<h1>HTML-Analyzer</h1>
-<div class="flex">
-<h3>Tags:</h3>
-<ul id="tagList"></ul>
-<h3>Classes:</h3>
-<ul id="classList"></ul>
-<h3>IDs:</h3>
-<ul id="idList"></ul>
-</div>
-<script src="assets/js/html-analyzer.js"></script>
-<!- HTML-Analyzer Debugging -->
 
 </body>
 </html>
