--- a/Links.htm
+++ b/Links.htm
@@ -66,114 +66,67 @@ snippets,vorlagen,lernen,verstehen,
 </header>
 <main>
 
-<!-- MAIN -->
 <div class="grid-container">
 <article class="content flow">
-
-<!-- print("hello world")  -->
-<h2>print("hello world") </h2>
-    <p>Diese Website ist im Aufbau</p>
-	<ul class="kleintxt">
-	<li>[2019-06]: Domain gemietet</li>
-	<li>[2020/21]: Konzeptentwicklung</li>
-	<li>[2022-11]: Ausarbeitung</li>
-	<li>[2023-03]: Designentwicklung</li>
-	<li>[2023-08]: Github-Anbindung</li>
-	<li>[2023-10]: Integration</li></ul>
-
-<!-- WTF is Jumi.biz ? -->
-<h2>WTF is Jumi.biz ?</h2>
-	<p>Hier findest du Zusammenfassungen zu verschiedenen Computerthemen. </p>
-
-<div class="inside-content">
-<div class="in-inside">
-<h3><a href="https://jumi.biz/Content.htm">
-Themen:</a></h3>
+<h4>Education</h4>
 <ul>
-<li>Fachinformatik</li>
-<li>Sicherheit</li>
-<li>Netzwerke</li>
-<li>Programmierung</li>
-<li>Projektmanagement</li>
-<li></li>
+<li><a href="https://www.theodinproject.com" target="_blank">TheOdinProject.com</a></li>
+<li><a href="https://www.freecodecamp.org" target="_blank">FreeCodeCamp.org</a></li>
+<li><a href="https://www.tryhackme.com" target="_blank">TryHackMe.com</a></li>
+<li><a href="https://media.ccc.de" target="_blank">media.ccc.de</a></li>
 </ul>
-</div>
-<div class="in-inside">
-<h3>Navigation: </h3>
-    <link rel="stylesheet" href="assets/css/word-as-button.css">
-    <ol><li><div class="keyboard-styled-word"><span>TAB</span></div> Selektieren </li>
-    <li><div class="keyboard-styled-word"><span>Enter</span></div> Öffnen </li></ol>
-    <ul><li>Rückwärts selektieren<br><div class="keyboard-styled-word"><span>Shift</span></div> + <div class="keyboard-styled-word"><span>TAB</span></div></li></ul>
-</div>
-</div>
 </article>
 <article class="content flow">
-
-<!-- $ whoami -->
-<h2>&#36; whoami</h2>
-
-<div class="flex">
-
-<img id="modalTrigger01" src="assets/img/profile-img-1.png"
-alt="Picture shows Jumi">
-<dialog id="openModal01">
-<img src="assets/img/modal/profile-img-modal-01.png" alt="Image-Modal" id="imgModal01">
-<h2>Human Interface</h2>
-<button id="closeModal01"> &times; </button></dialog>
-
-<img id="modalTrigger02" src="assets/img/profile-img-2.png"
-alt="Picture shows shoe">
-<dialog id="openModal02">
-<img src="assets/img/modal/profile-img-modal-02.png" alt="Image-Modal" id="imgModal02">
-<h2>Local Area</h2>
-<button id="closeModal02"> &times; </button></dialog>
-
-<img id="modalTrigger03" src="assets/img/profile-img-3.png"
-alt="Picture shows computer">
-<dialog id="openModal03">
-<img src="assets/img/modal/profile-img-modal-03.png" alt="Image-Modal" id="imgModal03">
-<h2>Central Processing</h2>
-<button id="closeModal03"> &times; </button></dialog>
-
-</div>
-
-    <p>Mir macht es Spass, mich mit IT zu beschäftigen und grundlegendes Wissen für Lernzwecke in
-    visuell-ergonomische Texte zu fragmentieren. Meine Quellen sind öffentliche Personen mit großer Reichweite und private Weiterbildungen.<br><br>
-    <span class="kleintxt">"Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske!" <br><br>-V wie Vendetta (2005)</span></p>
-
+<h4>Et cetera</h4>
+<ul>
+<li><a href="https://www.virustotal.com/" target="_blank">Virus Total</a></li>
+<li><a href="https://codepen.io/pen/" target="_blank">CodePen</a></li>
+<li><a href="https://code.sgo.to/typograms/#related" target="_blank">Typogramme</a></li>
+</ul>
 </article>
 <article class="content flow">
-
-<!-- Dark Mode Only -->
-<h2>Dark Mode Only</h2>
-    <p>Ein dunkler Bildschirm spart bis zu 60% Energie und schont die Augen.
-    Wenn du den hellen Modus immer noch bevorzugst dann GTFO!<br><br>
-    <span class="kleintxt">"Come to the Dark Side" <br>-Darth Vader</span></p>
-
+<h4>Künstliche Intelligenz</h4>
+<ul>
+<li><a href="https://you.com/" target="_blank">You.com</a></li>
+</ul>
 </article>
 <article class="content flow">
-
-<!-- IT ~ Kung Fu -->
-<h2>IT &#126; Kung Fu</h2>
-    <p>Der chinesische Begriff "Kung Fu" bezieht sich auf Fähigkeiten und Techniken,
-    die durch lange, harte Übung und Geduld erlangt werden. Eine Disziplin,
-    die zur Meisterung viel Engagement und Einsatz erfordert.
-    Kung Fu kombiniert Bewegungen und Strategien,
-    während Informations-Technologie Daten verarbeitet und speichert.
-    Kung Fu beherrschen verlangt Reaktionsfähigkeit,
-    bei Informationen entscheidet analytisches und logisches Denken.<br><br>
-    <span class="kleintxt">"Der Meister erscheint wenn der Schüler bereit ist" <br>-Karate Tiger (1986)</span></p>
-
+<h4>Musik</h4>
+<ul>
+<li><a href="https://www.youtube.com/c/cryochamberlabel" target="_blank">Cryo Chamber</a></li>
+<li><a href="https://www.youtube.com/@VaporMemory" target="_blank">Vapor Memory</a></li>
+<li><a href="https://the80sguy.org/sub" target="_blank">The '80s Guy</a></li>
+<li><a href="https://8bit.fm/" target="_blank">8bit.fm</a></li>
+<li><a href="https://www.youtube.com/c/LofiGirl" target="_blank">Lofi Girl</a></li>
+</ul>
 </article>
 <article class="content flow">
-
-<!-- Shownotes -->
-<h3>Shownotes</h3>
-	<ul><li>Kommasetzung mit KI: <a href="https://komma.ai/#" target="_blank">komma.ai</a></li>
-	<li>Suchmaschine mit KI: <a href="https://you.com" target="_blank">you.com</a></li>
-	<li>HTML-Checker: <a href="https://validator.w3.org/" target="_blank">validator.w3.org</a></li>
-	<li>CSS-Checker: <a href="https://jigsaw.w3.org/css-validator/" target="_blank">jigsaw.w3.org/css-validator</a></li></ul>
-
+<h4>Youtube</h4>
+<ul>
+<li><a href="https://www.youtube.com/c/Algorithmenverstehen" target="_blank">Florian Dalwigk</a></li>
+<li><a href="https://www.youtube.com/user/TheMorpheus407/playlists" target="_blank">The Morpheus Tutorials</a></li>
+<li><a href="https://www.youtube.com/user/SemperVideo/videos" target="_blank">Semper Video</a></li>
+<li><a href="https://www.youtube.com/c/DistroTube" target="_blank">DistroTube</a></li>
+<li><a href="https://www.youtube.com/c/DavidBombal" target="_blank">David Bombal</a></li>
+<li><a href="https://www.youtube.com/user/EugeneKhutoryansky/videos" target="_blank">... 3D animated Education-Videos</a></li>
+<li><a href="https://www.youtube.com/c/BranchEducation/videos" target="_blank">Branch Education</a></li>
+<li><a href="https://www.youtube.com/c/DisruptReality" target="_blank">Disrupt</a></li>
+<li><a href="https://www.youtube.com/c/EFLinuxMadeSimple" target="_blank">EF Linux Made Simple</a></li>
+<li><a href="https://www.youtube.com/c/PowerCertAnimatedVideos" target="_blank">PowerCert Animated Videos</a></li>
+<li><a href="https://www.youtube.com/c/Fireshipx" target="_blank">Fireship</a></li>
+<li><a href="https://www.youtube.com/c/eHaJo" target="_blank">eHaJo</a></li>
+<li><a href="https://www.youtube.com/c/computerclubzwei" target="_blank">Computer Club 2</a></li>
+<li><a href="https://www.youtube.com/c/ChrisTitusTech" target="_blank">Chris Titus</a></li>
+<li><a href="https://www.youtube.com/c/LearnLinuxtv" target="_blank">Learn Linux TV</a></li>
+<li><a href="https://www.youtube.com/c/ct3003" target="_blank">ct3003</a></li>
+<li><a href="https://www.youtube.com/@KevinPowell" target="_blank">Kevin Powell</a></li>
+<li><a href="https://www.youtube.com/c/TheHatedOne" target="_blank">The Hated One</a></li>
+<li><a href="https://www.youtube.com/c/LiveOverflow" target="_blank">Live Overflow</a></li>
+<li><a href="https://www.youtube.com/c/hak5" target="_blank">hak5</a></li>
+<li><a href="https://www.youtube.com/c/ippsec" target="_blank">IppSec</a></li>
+<li><a href="https://www.youtube.com/@MentalOutlaw" target="_blank">Mental Outlaw</a></li>
+<li><a href="https://www.youtube.com/@PenAce" target="_blank">Pen Ace</a></li>
+</ul>
 </article>
 </div>
 </main>
