--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ alt="Picture shows computer">
 <!--fix this br there
 --> <br><p>Mir macht es Spass, mich mit IT zu beschäftigen und
     visuell-ergonomische Texte zu&nbsp;fragmentieren. Meine&nbsp;Quellen sind öffentliche Personen mit großer Reichweite und private&nbsp;Weiterbildungen.<br><br>
-    <span class="kleintxt">"Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske!" <br><br>-V wie Vendetta (2005)</span></p>
+    <span class="kleintxt">"Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske" <br><br>-V wie Vendetta (2005)</span></p>
 
 </article>
 <article class="content flow">
