--- a/Cheats.htm
+++ b/Cheats.htm
@@ -87,7 +87,7 @@ snippets,vorlagen,lernen,verstehen,
 <br>-Elliot Alderson (S2E2)</span>
 </article><article class="content flow">
 <h2 class="glowtxt">Biolumineszenz</h2>
-<p>Dies geschieht mithilfe von Enzymen und dem Molekül <span class="glowtxt">Luciferin</span>, abgeleiet von dem lateinischen Wort für "Lichtträger".&nbsp;Der&nbsp;Begriff wurde von dem französischen Chemiker Raphaël Dubois geprägt, der im&nbsp;19.&nbsp;Jahrhundert.</p>
+<p>Dies geschieht mithilfe von Enzymen und dem Molekül <span class="glowtxt">Luciferin</span>, abgeleiet von dem lateinischen Wort für "Lichtträger".&nbsp;Der&nbsp;Begriff wurde von dem französischen Chemiker Raphaël Dubois geprägt&nbsp;(19.&nbsp;Jahrhundert).</p>
 </article></div></main>
 <!-- IMPRESSUM -->
 <footer><span class="flex profil-links">
