--- a/404.html
+++ b/404.html
@@ -213,7 +213,8 @@ h2, h3, h4 {
 <main>
 
 <div class="content">
-<h1>404 Page Not Found</h1>
+<h1>404</h1>
+<h2>Page Not Found </h2>
 <h2><b>¯\_(ツ)_/¯</b></h2>
 <p>Die Seite ist nicht verfügbar...<br>
 ...oder in einem anderen Verzeichnis.</p>
