--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <!-- Favicon -->
-<link rel="icon" href="../assets/img/ico/jumi.ico">
+<link rel="icon" href="..https://jumi.biz/assets/img/ico/jumi.ico">
 <title>jumi|404</title>
 
 <!-- Layout -->
-<link rel="stylesheet" href="../assets/css/main.css">
+<link rel="stylesheet" href="https://jumi.biz/assets/css/main.css">
 <style>
 body {
     min-height: 100vh;
@@ -169,7 +169,8 @@ main {
     color: #ffbfea; /* pink */
     font-family: 'Sarpanch', sans-serif;
     text-shadow: none;
-    font-size: 2.3rem;
+    text-decoration: none;
+    font-size: 4.2rem;
 }
 h2, h3, h4 {
     text-shadow: 1.5px 2px black;
@@ -186,18 +187,23 @@ h2, h3, h4 {
 }
 .content b {color: #00f0f0;}
 .content {
-    width: min(97%, 70rem);
+    width: min(95%, 85vw);
     margin-inline: auto;
     text-align: center;
     text-shadow: 1.5px 2px black;
+    text-decoration: none;
     align-items: center;
     justify-content: space-around;
+    margin-top: 6%;
 }
 .search-container {
     width: min(97%, 70rem);
+    margin-inline: auto;
     text-align: center;
+    align-items: center;
     justify-content: space-around;
 }
+.email {margin-bottom: 8%;}
 
 </style>
 
@@ -220,11 +226,12 @@ h2, h3, h4 {
 ...oder in einem anderen Verzeichnis.</p>
 <div class="search-container">
     <form accept-charset="UTF-8" id="search" action="/search" method="get">
-    <label for="search">Find Keywords:</label>
-    <input type="text" name="q">
-    <input class="btn" type="submit" value="Search">
+    <label for="search">Was suchst du? </label><br><br>
+    <input type="text" name="q">&nbsp;<input class="btn" type="submit" value="Search">
     </form>
-</div>
+</div><br>
+<p>Hast du Fragen zu dieser Website?<br>
+Schreibe eine Email an:</p>
 <h2 class="email">webmaster&#64;jumi.biz</h2>
 </div>
 <footer>
